--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -1,11 +1,11 @@
 # Automatically created by: scrapy startproject
 #
 # For more information about the [deploy] section see:
-# https://scrapyd.readthedocs.io/en/latest/deploy.html
+# https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = pic.settings
+default = seiya.spider.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = pic
+project = seiya
